--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7512,7 +7512,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2|K31-t3)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7655,6 +7655,8 @@ Lenovo:
       model: 'K5'
     - regex: 'A7020a4[08][/;) ]'
       model: 'K5 Note'
+    - regex: 'K31-t3[/;) ]'
+      model: 'K31'
     - regex: '(?:A6020a46|Vibe K5 Plus)[/;) ]'
       model: 'Vibe K5 Plus'
     - regex: '(?:Lenovo-)?(?:A6020(?:a40|l36)|Vibe K5)[/;) ]'
@@ -8416,7 +8418,7 @@ Mediacom:
 
 # Medion
 Medion:
-  regex: 'Medion|(?:MD_)?LIFETAB|([SPX]10[0-9]{2}X|E10[45]1X|X5001|P851X)[);/ ]'
+  regex: 'Medion|(?:MD_)?LIFETAB|([SPX]10[0-9]{2}X|E10[45]1X|X5001|P851X|P850X)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MD_)?LIFETAB_([a-z0-9]+)'
@@ -8429,7 +8431,7 @@ Medion:
     - regex: '(E10[45]1X)[);/ ]'
       device: 'tablet'
       model: '$1'
-    - regex: '([SPX]10[0-9]{2}X|P851X)[);/ ]'
+    - regex: '([SPX]10[0-9]{2}X|P851X|P850X)[);/ ]'
       model: 'Lifetab $1'
       device: 'tablet'
     - regex: 'Medion(?: Smartphone)? ([^/;]+) Build'
@@ -8761,7 +8763,7 @@ Mobistel:
 
 # Mecool
 Mecool:
-  regex: '(?:KM9PRO|BB2 PRO|KII PRO|KM9_TV_BOX|M8SPROW)[);/ ]'
+  regex: '(?:KM9PRO|BB2 PRO|KII PRO|KM9_TV_BOX|M8SPROW|M8S (?:PLUS|PRO) (?:DVB|[LW]|PLUS)|M8S (?:MAX|PRO))[);/ ]'
   device: 'tv'
   models:
     - regex: 'KM9PRO[);/ ]'
@@ -8774,6 +8776,18 @@ Mecool:
       model: 'KII Pro'
     - regex: 'M8SPROW[);/ ]'
       model: 'M8S Pro W'
+    - regex: 'M8S PLUS DVB[);/ ]'
+      model: 'M8S Plus DVB'
+    - regex: 'M8S PLUS ([LW])[);/ ]'
+      model: 'M8S Plus $1'
+    - regex: 'M8S PRO ([LW])[);/ ]'
+      model: 'M8S Pro $1'
+    - regex: 'M8S PRO PLUS[);/ ]'
+      model: 'M8S Pro Plus'
+    - regex: 'M8S PRO[);/ ]'
+      model: 'M8S Pro'
+    - regex: 'M8S MAX[);/ ]'
+      model: 'M8S Max'
 
 # Modecom
 Modecom:
@@ -15330,13 +15344,13 @@ Qumo:
 
 # Umax
 Umax:
-  regex: 'VisionBook[ _]|8Qa_3G[;)/ ]'
+  regex: 'VisionBook[ _]|[78]Qa_3G[;)/ ]'
   device: 'tablet'
   models:
     - regex: '(VisionBook[ _](?:10Qi|7Q[i]?|8Q[e]?)(?:[ _](?:[34]G|Plus|LTE))?)[;)/ ]'
       model: '$1'
-    - regex: '8Qa_3G[;)/ ]'
-      model: 'VisionBook 8Qa 3G'
+    - regex: '([78])Qa_3G[;)/ ]'
+      model: 'VisionBook $1Qa 3G'
     - regex: '(VisionBook[ _](?:P50 LTE|P55 LTE(?: Pro)?))[;)/ ]'
       device: 'smartphone'
       model: '$1'
