--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15648,7 +15648,7 @@ Aligator:
   regex: 'ALIGATOR[_);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR[ _](S50(?:6[56]|[678]0))[);/ ]'
+    - regex: 'ALIGATOR[ _](S4080|S50(?:6[56]|[678]0))[);/ ]'
       model: '$1'
 
 # Maxcom
@@ -16287,7 +16287,7 @@ Tronsmart:
 
 # Amigoo
 Amigoo:
-  regex: 'AMIGOO (R300|R9 Max|M1 Max)[);/ ]'
+  regex: 'AMIGOO (R300|R9 Max|M1 Max|X15)[);/ ]'
   device: 'smartphone'
   model: '$1'
 
@@ -16526,3 +16526,17 @@ iDroid:
   regex: 'APACHE G6[);/ ]'
   device: 'smartphone'
   model: 'Apache G6'
+
+# Aoson
+Aoson:
+  regex: 'aoson(?:R10[1-3]|S[78])(?:[_ ]?Pro)?[);/ ]'
+  device: 'tablet'
+  models:
+    - regex: 'aosonR10([1-3])[);/ ]'
+      model: 'R10$1 10.1"'
+    - regex: 'aosonS7_Pro[);/ ]'
+      model: 'S7 Pro 7.0"'
+    - regex: 'aosonS7[);/ ]'
+      model: 'S7 7.0"'
+    - regex: 'aosonS8Pro[);/ ]'
+      model: 'S8 Pro 8.0"'
