--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -6335,3 +6335,43 @@
     model: X-Style S5501
   os_family: Android
   browser_family: Opera
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 8.1.0; en-US; MI_PLAY) U2/1.0.0 UCBrowser/9.8.0.534 U2/1.0.0 Mobile
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 9.8.0.534
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: XI
+    model: MI Play
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; MI PLAY) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.83 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: XI
+    model: MI Play
+  os_family: Android
+  browser_family: Chrome
