--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2314,7 +2314,7 @@ Blackview:
       model: '$1'
     - regex: '(BV9700)Pro'
       model: '$1 Pro'
-    - regex: 'Blackview (A8)'
+    - regex: 'Blackview (A8|E7S)'
       model: '$1'
     - regex: 'BV9000Pro-F'
       model: 'BV9000 Pro F'
@@ -14706,7 +14706,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609|dandelion)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[35] 2019-T|A6 MAX|A0622|X9)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609|dandelion)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14934,6 +14934,8 @@ ZTE:
       model: 'Blade V7'
     - regex: 'Blade X7[);/ ]'
       model: 'Blade X7'
+    - regex: 'Blade X9[);/ ]'
+      model: 'Blade X9'
     - regex: 'Blade V8Q[);/ ]'
       model: 'Blade V8Q'
     - regex: 'Blade V8 SE[);/ ]'
@@ -14948,7 +14950,7 @@ ZTE:
       model: 'Blade V8 Lite'
     - regex: 'BLADE V0850[);/ ]'
       model: 'Blade V8 Mini'
-    - regex: '(Apex2|G (LTE|Lux)|Vec)'
+    - regex: '(?:Blade[ _])?(Apex2|G (LTE|Lux)|Vec|A510)'
       model: 'Blade $1'
     - regex: 'Z768G[);/ ]'
       model: 'Midnight'
@@ -16745,9 +16747,24 @@ Nos:
     - regex: 'NOS Roya[);/ ]'
       model: 'Roya'
 
-# ACCENT
+# Accent
 Accent:
   regex: 'ACCENT_NEON[);/ ]'
   device: 'smartphone'
   model: 'Neon'
 
+# Avenzo (www.avenzo.es)
+Avenzo:
+  regex: 'Avenzo[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'MOB4 4G[);/ ]'
+      model: 'Mob 4 4G'
+    - regex: 'MOB4PRO 4G[);/ ]'
+      model: 'Mob 4 Pro 4G'
+
+# Beelink
+Beelink:
+  regex: 'Beelink (GT1|LAKE I|SEA I|A1)[);/ ]'
+  device: 'tv'
+  model: '$1'
